# juxtapos

./: .gitignore  .gitmodules  meson.build
assets/: fragment.glsl  quad_fragment.glsl  quad_vertex.glsl  vertex.glsl  wood.glsl
src/: hacks.h  main.c
textures/: make.sh
